Removed warnings and added package and imports